--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -8089,6 +8089,18 @@ form input[type=checkbox] {
   font-size: 1.1em;
 }
 
+.no-dates {
+  display: inline-block;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  background-color: #ddd;
+  font-weight: 700;
+  border: 1px solid #555;
+  color: #000;
+  padding: 1em 1.3em;
+  margin-top: 1em;
+}
+
 .order-form .form-error {
   color: #d4351c;
   font-weight: bold;
