--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -202,6 +202,18 @@ form {
     }
 }
 
+.no-dates {
+    display: inline-block;
+    font-family: "Open Sans",sans-serif;
+    text-decoration: none;
+    background-color: #ddd;
+    font-weight: 700;
+    border: 1px solid #555;
+    color: #000;
+    padding: 1em 1.3em;
+    margin-top: 1em;
+}
+
 .order-form {
     .form-error {
         color: #d4351c;
