--- a/book-a-reading-room-visit.web/Views/Shared/WhatCanIExpectWhenIVisit.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/WhatCanIExpectWhenIVisit.cshtml
@@ -74,8 +74,7 @@
 
                 <h2>Taking a break</h2>
                 <p>
-                    We are now offering a limited food and drink service in our restaurant between Tuesday and Friday, including hot drinks, sandwiches and cakes. Our shop is also open between 12:00 and 15:00, Tuesday to Friday. Please note that we are not
-                    accepting cash in either the shop or restaurant, only card and contactless payments.
+                    Please note that we are unable to provide any food and drink to visitors until Step 3 of the government’s roadmap (expected mid-May). We do, however, have plenty of indoor and outdoor seating for visitors to use while consuming their own refreshments.
                 </p>
 
                 <h2>Getting help with your research</h2>
