Updated the content changes

--- a/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
@@ -38,15 +38,14 @@
                 <h2>Terms of booking</h2>
                 <p>New slots for booking will be made available every day.</p>
                 <p>Each booking is for one person only on a first-come, first-served basis – you will not be able to bring anyone with you, unless they book a visit themselves or have a duty of care.</p>
-                <p>There is a reasonable limit of any two types of bookings (standard or bulk) in 28 days. Two bookings cannot be made for the same date.</p>
-                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of two bookings in 4 weeks.</p>
+                <p>There is a reasonable limit of three bookings of any type (standard or bulk) in a rolling 4-week period. Three bookings cannot be made for the same date.</p>
+                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of three bookings in 4 weeks.</p>
                 <h2>Access requirements</h2>
                 <p>All seats in our reading rooms are accessible. There is a lift in the building.</p>
                 <p>Read more information about the <a href="https://www.nationalarchives.gov.uk/about/visit-us/information-for-disabled-visitors/">access we provide</a>.</p>
-                <h2>Research requests</h2>
+                <h2> Getting help with your research </h2>
                 <p>
-                    We are currently unable to provide many of our usual reading room services, including research advice and copying. You can request <a href="https://tna.koha-ptfs.co.uk/">library materials</a>, camera stands, microfilm/fiche or finding/preservation
-                    aids that are normally available on self-service. We cannot guarantee that all of the research materials your request will be available for your visit.
+                    Computer access will be available to all visitors with a confirmed booking. We are now offering a reduced enquiry service for pre-booked visitors in the Start Here area of the first floor reading room between 10:00 and 14:00, and in the map and large document reading room between 11:00 and 13:00. However, our email and Live Chat enquiry services will remain available on our website, and we would recommend that you use them to plan your research before you visit.
                 </p>
                 <p>Computer access will be available to all visitors with a confirmed booking.</p>
                 <h3>Camera stands</h3>
