Reinstate important statement

--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -637,8 +637,8 @@ form {
 #room-selection-form {
     fieldset {
         background: rgba(19, 69, 113, 0.12);
-        border: 1px solid #134571;
-        border-bottom: 4px solid #134571;
+        border: 1px solid #134571 !important;
+        border-bottom: 4px solid #134571 !important;
         margin-bottom: 1em !important;
         padding: 1em !important;
 
