--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -8527,8 +8527,8 @@ form input[type=checkbox] {
 
 #room-selection-form fieldset {
   background: rgba(19, 69, 113, 0.12);
-  border: 1px solid #134571;
-  border-bottom: 4px solid #134571;
+  border: 1px solid #134571 !important;
+  border-bottom: 4px solid #134571 !important;
   margin-bottom: 1em !important;
   padding: 1em !important;
 }
