Updated two days booking to one day booking updated the availability screen to reflect the change

--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        Use this service to book a visit to view our documents. You may book a maximum of three visits in 4 weeks.<br>
+                        Use this service to book a visit to view our documents. You may book a maximum of four visits in 4 weeks.<br>
                         <a class="info-link" href="/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/">
                             Find out more about how to book and what to expect.
                         </a>
