--- a/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
@@ -38,8 +38,8 @@
                 <h2>Terms of booking</h2>
                 <p>New slots for booking will be made available every day.</p>
                 <p>Each booking is for one person only on a first-come, first-served basis – you will not be able to bring anyone with you, unless they book a visit themselves or have a duty of care.</p>
-                <p>There is a reasonable limit of three bookings of any type (standard or bulk) in a rolling 4-week period. Three bookings cannot be made for the same date.</p>
-                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of three bookings in 4 weeks.</p>
+                <p>There is a reasonable limit of four bookings of any type (standard or bulk) in a rolling 4-week period. Four bookings cannot be made for the same date.</p>
+                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of four bookings in 4 weeks.</p>
                 <h2>Access requirements</h2>
                 <p>All seats in our reading rooms are accessible. There is a lift in the building.</p>
                 <p>Read more information about the <a href="https://www.nationalarchives.gov.uk/about/visit-us/information-for-disabled-visitors/">access we provide</a>.</p>
