Updated the 4 visits to 12 visits

--- a/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
@@ -17,7 +17,7 @@
                 <p>Choose between a visit with a:</p>
                 <ul>
                     <li>standard advance document order (up to 12 documents plus three reserves) – a 1-day visit.</li>
-                    <li>bulk advance document order (if you want to see 20-40 documents all from the same series). Your booking will be valid for 2 consecutive days.</li>
+                    <li>bulk advance document order (if you want to see 20-40 documents all from the same series) – a 1-day visit.</li>
                 </ul>
                 <p>See our <a href="https://www.nationalarchives.gov.uk/about/visit-us/opening-times/">opening times</a>.</p>
                 <h2>How do I book?</h2>
@@ -38,8 +38,8 @@
                 <h2>Terms of booking</h2>
                 <p>New slots for booking will be made available every day.</p>
                 <p>Each booking is for one person only on a first-come, first-served basis – you will not be able to bring anyone with you, unless they book a visit themselves or have a duty of care.</p>
-                <p>There is a reasonable limit of four bookings of any type (standard or bulk) in a rolling 4-week period. Four bookings cannot be made for the same date.</p>
-                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of four bookings in 4 weeks.</p>
+                <p>There is a reasonable limit of twelve bookings of any type (standard or bulk) in a rolling twelve-week period. Four bookings cannot be made for the same date.</p>
+                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of twelve bookings in twelve weeks.</p>
                 <h2>Access requirements</h2>
                 <p>All seats in our reading rooms are accessible. There is a lift in the building.</p>
                 <p>Read more information about the <a href="https://www.nationalarchives.gov.uk/about/visit-us/information-for-disabled-visitors/">access we provide</a>.</p>
