--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        Use this service to book a visit to view our documents. You may book a maximum of twelve visits in twelve weeks.<br>
+                        Use this service to book a visit to view our documents. You may book a maximum of 12 visits in 12 weeks.<br>
                         <a class="info-link" href="/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/">
                             Find out more about how to book and what to expect.
                         </a>
