--- a/book-a-reading-room-visit.web/Views/Shared/TermsOfUse.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/TermsOfUse.cshtml
@@ -26,9 +26,8 @@
                 <h2>Booking a visit to view our documents</h2>
                 <p>New slots for booking will be made available every day.</p>
                 <p>Each booking is for one person only on a first come, first served basis – you will not be able to bring anyone with you, unless they book a visit themselves or have a duty of care. </p>
-                <p>There is a reasonable limit of twelve bookings of any type (standard or bulk) in a rolling twelve-week period. Twelve bookings cannot be made for the same date.</p>
-                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of twelve bookings in twelve weeks. </p>
-
+                <p>There is a reasonable limit of 12 bookings of any type (standard or bulk) in a rolling 12-week period. You cannot make more than one booking for the same date.</p>
+                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit. </p>
             </div>
         </div>
     </div>
