Updated more editorial changes

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -177,7 +177,7 @@
                         </li>
                         <li>
                             more information about this service:<br>
-                                                                <a target="_blank" rel="noreferrer noopener" href="/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/">https://www.nationalarchives.gov.uk/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/</a>
+                                                                <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/about/visit-us/about-the-book-a-reading-room-visit-service/">https://www.nationalarchives.gov.uk/about/visit-us/about-the-book-a-reading-room-visit-service/</a>
                         </li>
                     </ul>
                     <p>Remember to bring the correct documents to complete your registration if you are using your reader's ticket for the first time.</p>
