--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -15,8 +15,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <p>
-                        Use this service to book a visit to view our documents. You may book a maximum of 12 visits in 12 weeks.<br>
-                        <a class="info-link" href="/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/">
+                        Use this service to book a visit to view our documents. You may book a maximum of 12 visits in a rolling 12-week period.<br>
+                        <a class="info-link" href="https://www.nationalarchives.gov.uk/about/visit-us/about-the-book-a-reading-room-visit-service/">
                             Find out more about how to book and what to expect.
                         </a>
                     </p>
@@ -48,6 +48,7 @@
                             <li>1-day visit</li>
                             <li>Up to 12 documents</li>
                             <li>Camera stands and computer access available</li>
+                            <li>On-demand document ordering</li>
                         </ul>
 
                         @if (Model.StandardBookingAvailable > 0)
@@ -76,6 +77,7 @@
                             <li>1-day visit</li>
                             <li>Between 20 and 40 documents</li>
                             <li>Camera stands and computer access available</li>
+                            <li>On-demand document ordering</li>
                         </ul>
 
                         @if (Model.BulkBookingsAvailable > 0)
