added missing para

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -195,6 +195,9 @@
                         Remember to wear a face mask when you visit, unless you have a valid exemption:<br>
                         <a target="_blank" rel="noreferrer noopener" href="https://www.gov.uk/government/publications/face-coverings-when-to-wear-one-and-how-to-make-your-own/face-coverings-when-to-wear-one-and-how-to-make-your-own#exemptions">https://www.gov.uk/government/publications/face-coverings-when-to-wear-one-and-how-to-make-your-own/face-coverings-when-to-wear-one-and-how-to-make-your-own#exemptions</a>
                     </p>
+                    <p>
+                        During your visit, you will be able to order additional documents to view (an additional three documents at a time).
+                    </p>
                     <h2>Can I cancel my visit?</h2>
 
                     <p>You can cancel your visit at anytime.</p>
