--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -173,7 +173,7 @@
                     <ul>
                         <li>
                             how to use the reading rooms (rules for readers):<br>
-                            <a target="_blank" rel="noreferrer noopener" href="https://nationalarchives.gov.uk/documents/rules.pdf">https://www.nationalarchives.gov.uk/documents/rules.pdf</a>
+                            <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/documents/rules.pdf">https://www.nationalarchives.gov.uk/documents/rules.pdf</a>
                         </li>
                         <li>
                             more information about this service:<br>
