Updated camera stand text KBS-318

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -89,7 +89,7 @@
                             <details open>
                                 <summary>Need a camera stand?</summary>
                                 <p class="helper-text no-margin no-padding">
-                                    All seats in the Document reading room have a camera stand provided. If you are visiting the Map and large document reading room, tell us if you need a camera stand in the ‘Access needs and research requests’ box when you order your documents in step 4.
+                                    Please tell us if you need a camera stand in the ‘Access needs and research requests’ box when you order your documents in step 4.
                                 </p>
                             </details>
                         </div>
@@ -111,7 +111,7 @@
                         <details open>
                             <summary>Need a camera stand?</summary>
                             <p class="helper-text no-margin">
-                                Tell us if you need a camera stand in the ‘Access needs and research requests’ box when you order your documents in step 4.
+                                Please tell us if you need a camera stand in the ‘Access needs and research requests’ box when you order your documents in step 4.
                             </p>
                         </details>
                     </div>
