removed the label all seats have camera stand

--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -64,7 +64,7 @@
                                 @if (Model.SeatType == SeatTypes.StdRRSeat)
                                 {
                                     <td>
-                                        Document reading room <span class="secondary-info">All seats have camera stands</span>
+                                        Document reading room
                                     </td>
                                 }
                                 else
