--- a/book-a-reading-room-visit.web/Views/DocumentOrder/ContinueLater.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/ContinueLater.cshtml
@@ -59,7 +59,7 @@
                                 <th scope="row">Reading room</th>
                                 @if (Model.SeatType == SeatTypes.StdRRSeat)
                                 {
-                                    <td>Document reading room <span class="secondary-info">All seats have camera stands.</span></td>
+                                    <td>Document reading room</td>
                                 }
                                 else
                                 {
