--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -91,7 +91,7 @@
                             {
                                 @if (Model.SeatType == SeatTypes.StdRRSeat)
                                 {
-                                    <td>Document reading room <span class="secondary-info">All seats have camera stands.</span></td>
+                                    <td>Document reading room</td>
                                 }
                                 else
                                 {
