--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -43,7 +43,7 @@
             <div class="col-md-12">
                 <div class="prompt-grey full-width warning-panel">
                     To confirm your booking, complete the document order form by
-                    <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at midnight, local UK time.</span>
+                    <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>
                 </div>
             </div>
         </div>
