--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -98,7 +98,7 @@
                 </script>
                 <div id="enter-your-details-timer" class="full-width warning-panel">
                     <h3>@(ViewData.ModelState.IsValid ? "You have 20 minutes to enter your details." : "Enter your details")</h3>
-                    <span id="timer">Complete this page by @Model.ExpiredBy.ToString("h:mtt").ToLower(), local UK time.</span>
+                    <span id="timer">Complete this page by @Model.ExpiredBy.ToString("h:mmtt").ToLower(), local UK time.</span>
                     <small>If you do not complete the form by this time we will cancel your seat and you will need to start the process again.</small>
                 </div>
             </div>
