Removed extra fullstop

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -33,7 +33,7 @@
                     <div class="prompt-grey full-width success-panel extra-margin">
                         <h2>Your document order has been saved.</h2>
                         <p>
-                            You can still return to add to or remove documents from your order until your document order deadline, which is <br><span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>.
+                            You can still return to add to or remove documents from your order until your document order deadline, which is <br><span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>
                         </p>
                     </div>
                 </div>
