--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -43,7 +43,7 @@
                     Archives.
                 </p>
                 <p>
-                    If you do not complete this step by <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>
+                    If you do not complete this step by <span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time</span>
                     your visit will be automatically cancelled. Once this date has passed, you cannot change your document order as we will begin
                     preparing your order for your visit.
                 </p>
@@ -116,7 +116,7 @@
 
     <div class="prompt-grey full-width warning-panel">
         <p class="no-margin">
-            You can add or remove documents from this order <span class="bold-text">until @($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>.
+            You can add or remove documents from this order <span class="bold-text">until @($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>
         </p>
     </div>
 
