--- a/book-a-reading-room-visit.web/Views/DocumentOrder/ContinueLater.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/ContinueLater.cshtml
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-12">
                 <p>
-                    You have a provisional booking to visit the reading rooms. Confirm it by filling in the document order form before <br><span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>.
+                    You have a provisional booking to visit the reading rooms. Confirm it by filling in the document order form before <br><span class="bold-text">@($"{Model.CompleteByDate:dddd dd MMMM yyyy}") at 11:59pm, local UK time.</span>
                 </p>
                 <p>
                     If you do not fill in the document order form by this date, your visit will be automatically cancelled.
