--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="prompt-grey full-width success-panel">
-                    <h2>You have made a provisional booking to visit the reading rooms</h2>
+                    <h2>You have made a provisional booking to visit the reading rooms.</h2>
                     <p>Your booking reference is @(Model.BookingReference). Keep a note of this number.</p>
                 </div>
             </div>
